[gd_scene load_steps=26 format=3 uid="uid://d36rtp405vhun"]

[ext_resource type="Script" path="res://scripts/pixel/pixel_melba.gd" id="1_qa0qv"]
[ext_resource type="Material" uid="uid://cimhmqlj16qqv" path="res://shaders/smooth_pixel.tres" id="2_2eubx"]
[ext_resource type="Texture2D" uid="uid://ceut2s8wkja0m" path="res://assets/pixel/melba_toast_back_hair.png" id="3_nbqeo"]
[ext_resource type="Texture2D" uid="uid://1ot8s5pg2bxc" path="res://assets/pixel/melba_toast_twintails.png" id="4_bvpve"]
[ext_resource type="Texture2D" uid="uid://bmh3o6qcs0a6i" path="res://assets/pixel/melba_toast_shirt.png" id="5_aevqw"]
[ext_resource type="Texture2D" uid="uid://qtjderhjoqbs" path="res://assets/pixel/melba_toast_toast.png" id="6_nlbr3"]
[ext_resource type="Texture2D" uid="uid://byjvwdpcbr6r0" path="res://assets/pixel/melba_toast_face.png" id="7_amvuy"]
[ext_resource type="Texture2D" uid="uid://ceg813ex013pr" path="res://assets/pixel/melba_toast_hair.png" id="8_cpg2t"]
[ext_resource type="Texture2D" uid="uid://vk61trg4ujx1" path="res://assets/pixel/melba_toast_eyebrows.png" id="9_gmvlg"]
[ext_resource type="Texture2D" uid="uid://cs20lq4tetg78" path="res://assets/pixel/melba_toast_eyebrows_down.png" id="10_dsdly"]
[ext_resource type="Texture2D" uid="uid://bg1vi370mu306" path="res://assets/pixel/melba_toast_eyes.png" id="11_ysvjp"]
[ext_resource type="Texture2D" uid="uid://dg114s0nxdiw" path="res://assets/pixel/melba_toast_eyes_closed.png" id="12_76lfa"]
[ext_resource type="Texture2D" uid="uid://cjtqfltyw3elq" path="res://assets/pixel/melba_toast_pupils.png" id="13_j3kej"]
[ext_resource type="Texture2D" uid="uid://cuutg4r763qx8" path="res://assets/pixel/melba_toast_mouth_closed.png" id="14_x8rj0"]
[ext_resource type="Texture2D" uid="uid://dviqyjuaqfwh5" path="res://assets/pixel/melba_toast_mouth_open.png" id="15_81i57"]
[ext_resource type="Texture2D" uid="uid://k5ks3lcxtl61" path="res://assets/pixel/melba_toast_bow.png" id="16_xkn4b"]

[sub_resource type="Animation" id="Animation_xj4x8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouthOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouthClosed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hnwk5"]
resource_name = "mouth"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MouthOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MouthClosed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qndeq"]
_data = {
"RESET": SubResource("Animation_xj4x8"),
"mouth": SubResource("Animation_hnwk5")
}

[sub_resource type="Animation" id="Animation_vo41o"]
length = 0.001

[sub_resource type="Animation" id="Animation_j8mal"]
resource_name = "blink"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Eyebrows:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pupils:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EyebrowsClosed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EyesClosed:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ftti"]
_data = {
"RESET": SubResource("Animation_vo41o"),
"blink": SubResource("Animation_j8mal")
}

[sub_resource type="Animation" id="Animation_1jvj5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TwinTails:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Toast:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pupils:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_qijxt"]
resource_name = "read_chat"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TwinTails:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Toast:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hair:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pupils:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, -1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Bow:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldwq7"]
_data = {
"RESET": SubResource("Animation_1jvj5"),
"look_at_chat": SubResource("Animation_qijxt")
}

[node name="PixelMelba" type="Node2D"]
script = ExtResource("1_qa0qv")

[node name="BackHair" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("3_nbqeo")

[node name="TwinTails" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("4_bvpve")

[node name="Shirt" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("5_aevqw")

[node name="Toast" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("6_nlbr3")

[node name="Face" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("7_amvuy")

[node name="Hair" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("8_cpg2t")

[node name="Eyebrows" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("9_gmvlg")

[node name="EyebrowsClosed" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_2eubx")
texture = ExtResource("10_dsdly")

[node name="Eyes" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("11_ysvjp")

[node name="EyesClosed" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_2eubx")
texture = ExtResource("12_76lfa")

[node name="Pupils" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("13_j3kej")

[node name="MouthClosed" type="Sprite2D" parent="."]
visible = false
material = ExtResource("2_2eubx")
texture = ExtResource("14_x8rj0")

[node name="MouthOpen" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("15_81i57")

[node name="Bow" type="Sprite2D" parent="."]
material = ExtResource("2_2eubx")
texture = ExtResource("16_xkn4b")

[node name="MouthAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qndeq")
}

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ftti")
}

[node name="ReadingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ldwq7")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
